==> maxksiazka/SR_Project/sumo/lib/VL53L0X_pico_lib/src/tof.c <==
#include <stdio.h>
#include <string.h>
#include <math.h>
#include "pico/stdlib.h"
#include "pico/binary_info.h"
#include "hardware/i2c.h"
#define usleep(A) sleep_us(A)
#define calcMacroPeriod(vcsel_period_pclks) ((((uint32_t)2304 * (vcsel_period_pclks) * 1655) + 500) / 1000)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)
#define SEQUENCE_ENABLE_FINAL_RANGE 0x80
#define SEQUENCE_ENABLE_PRE_RANGE   0x40
#define SEQUENCE_ENABLE_TCC         0x10
#define SEQUENCE_ENABLE_DSS         0x08
#define SEQUENCE_ENABLE_MSRC        0x04
#define REG_IDENTIFICATION_MODEL_ID		0xc0
#define REG_IDENTIFICATION_REVISION_ID		0xc2
#define REG_SYSRANGE_START			0x00
#define REG_RESULT_INTERRUPT_STATUS 		0x13
#define RESULT_RANGE_STATUS      		0x14
#define ALGO_PHASECAL_LIM                       0x30
#define ALGO_PHASECAL_CONFIG_TIMEOUT            0x30
#define GLOBAL_CONFIG_VCSEL_WIDTH               0x32
#define FINAL_RANGE_CONFIG_VALID_PHASE_LOW      0x47
#define FINAL_RANGE_CONFIG_VALID_PHASE_HIGH     0x48
#define PRE_RANGE_CONFIG_VCSEL_PERIOD           0x50
#define PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI      0x51
#define PRE_RANGE_CONFIG_VALID_PHASE_LOW        0x56
#define PRE_RANGE_CONFIG_VALID_PHASE_HIGH       0x57
#define REG_MSRC_CONFIG_CONTROL                 0x60
#define FINAL_RANGE_CONFIG_VCSEL_PERIOD         0x70
#define FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI    0x71
#define MSRC_CONFIG_TIMEOUT_MACROP              0x46
#define FINAL_RANGE_CONFIG_MIN_COUNT_RATE_RTN_LIMIT  0x44

static unsigned char readReg(i2c_inst_t *i2c, uint8_t addr, unsigned char ucAddr)
{
unsigned char ucTemp;
    i2c_write_blocking(i2c, addr,&ucAddr,1,true);
    i2c_read_blocking(i2c, addr,&ucTemp,1,false);

	return ucTemp;
}

static void readMulti(i2c_inst_t *i2c, uint8_t addr, unsigned char ucAddr, unsigned char *pBuf, int iCount)
{
   i2c_write_blocking(i2c,addr,&ucAddr,1,true);
   i2c_read_blocking(i2c,addr,pBuf,iCount,false);
}

static void writeMulti(i2c_inst_t *i2c, uint8_t addr, unsigned char ucAddr, unsigned char *pBuf, int iCount)
{
unsigned char ucTemp[16];
int rc;

	ucTemp[0] = ucAddr;
	memcpy(&ucTemp[1], pBuf, iCount);
   i2c_write_blocking(i2c,addr,ucTemp,iCount+1,false);
}

static void writeReg(i2c_inst_t *i2c, uint8_t addr ,unsigned char ucAddr, unsigned char ucValue)
{
unsigned char ucTemp[2];
int rc;

	ucTemp[0] = ucAddr;
	ucTemp[1] = ucValue;
   i2c_write_blocking(i2c,addr,ucTemp,2,false);

}

static int getSpadInfo(i2c_inst_t *i2c, uint8_t addr, unsigned char *pCount, unsigned char *pTypeIsAperture)
{
int iTimeout;
unsigned char ucTemp;
#define MAX_TIMEOUT 50

  writeRegList(i2c, addr, ucSPAD0);
  writeReg(i2c, addr, 0x83, readReg(i2c, addr, 0x83) | 0x04);
  writeRegList(i2c, addr, ucSPAD1);
  iTimeout = 0;
  while(iTimeout < MAX_TIMEOUT)
  {
    if (readReg(i2c, addr, 0x83) != 0x00) break;
    iTimeout++;
    usleep(5000);
  }
  if (iTimeout == MAX_TIMEOUT)
  {
    fprintf(stderr, "Timeout while waiting for SPAD info\n");
    return 0;
  }
  writeReg(i2c, addr, 0x83,0x01);
  ucTemp = readReg(i2c, addr, 0x92);
  *pCount = (ucTemp & 0x7f);
  *pTypeIsAperture = (ucTemp & 0x80);
  writeReg(i2c, addr, 0x81,0x00);
  writeReg(i2c, addr, 0xff,0x06);
  writeReg(i2c, addr, 0x83, readReg(i2c, addr, 0x83) & ~0x04);
  writeRegList(i2c, addr, ucSPAD2);
  
  return 1;
}

static void getSequenceStepTimeouts(i2c_inst_t *i2c, uint8_t addr, uint8_t enables, SequenceStepTimeouts * timeouts)
{
  timeouts->pre_range_vcsel_period_pclks = ((readReg(i2c, addr, PRE_RANGE_CONFIG_VCSEL_PERIOD) +1) << 1);

  timeouts->msrc_dss_tcc_mclks = readReg(i2c, addr, MSRC_CONFIG_TIMEOUT_MACROP) + 1;
  timeouts->msrc_dss_tcc_us =
    timeoutMclksToMicroseconds(timeouts->msrc_dss_tcc_mclks,
                               timeouts->pre_range_vcsel_period_pclks);

  timeouts->pre_range_mclks =
    decodeTimeout(readReg16(i2c, addr, PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI));
  timeouts->pre_range_us =
    timeoutMclksToMicroseconds(timeouts->pre_range_mclks,
                               timeouts->pre_range_vcsel_period_pclks);

  timeouts->final_range_vcsel_period_pclks = ((readReg(i2c, addr, FINAL_RANGE_CONFIG_VCSEL_PERIOD) +1) << 1);

  timeouts->final_range_mclks =
    decodeTimeout(readReg16(i2c, addr, FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI));

  if (enables & SEQUENCE_ENABLE_PRE_RANGE)
  {
    timeouts->final_range_mclks -= timeouts->pre_range_mclks;
  }

  timeouts->final_range_us =
    timeoutMclksToMicroseconds(timeouts->final_range_mclks,
                               timeouts->final_range_vcsel_period_pclks);
}

static int setVcselPulsePeriod(i2c_inst_t *i2c, uint8_t addr, vcselPeriodType type, uint8_t period_pclks)
{
  uint8_t vcsel_period_reg = encodeVcselPeriod(period_pclks);

  uint8_t enables;
  SequenceStepTimeouts timeouts;

  enables = readReg(i2c, addr, SYSTEM_SEQUENCE_CONFIG);
  getSequenceStepTimeouts(i2c, addr, enables, &timeouts);

  // "Apply specific settings for the requested clock period"
  // "Re-calculate and apply timeouts, in macro periods"

  // "When the VCSEL period for the pre or final range is changed,
  // the corresponding timeout must be read from the device using
  // the current VCSEL period, then the new VCSEL period can be
  // applied. The timeout then must be written back to the device
  // using the new VCSEL period.
  //
  // For the MSRC timeout, the same applies - this timeout being
  // dependant on the pre-range vcsel period."


  if (type == VcselPeriodPreRange)
  {
    // "Set phase check limits"
    switch (period_pclks)
    {
      case 12:
        writeReg(i2c, addr, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x18);
        break;

      case 14:
        writeReg(i2c, addr, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x30);
        break;

      case 16:
        writeReg(i2c, addr, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x40);
        break;

      case 18:
        writeReg(i2c, addr, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x50);
        break;

      default:
        // invalid period
        return 0;
    }
    writeReg(i2c, addr, PRE_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);

    // apply new VCSEL period
    writeReg(i2c, addr, PRE_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg);

    // update timeouts

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_PRE_RANGE)

    uint16_t new_pre_range_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.pre_range_us, period_pclks);

    writeReg16(i2c, addr, PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(new_pre_range_timeout_mclks));

    // set_sequence_step_timeout() end

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_MSRC)

    uint16_t new_msrc_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.msrc_dss_tcc_us, period_pclks);

    writeReg(i2c, addr, MSRC_CONFIG_TIMEOUT_MACROP,
      (new_msrc_timeout_mclks > 256) ? 255 : (new_msrc_timeout_mclks - 1));

    // set_sequence_step_timeout() end
  }
  else if (type == VcselPeriodFinalRange)
  {
    switch (period_pclks)
    {
      case 8:
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x10);
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(i2c, addr, GLOBAL_CONFIG_VCSEL_WIDTH, 0x02);
        writeReg(i2c, addr, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x0C);
        writeReg(i2c, addr, 0xFF, 0x01);
        writeReg(i2c, addr, ALGO_PHASECAL_LIM, 0x30);
        writeReg(i2c, addr, 0xFF, 0x00);
        break;

      case 10:
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x28);
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(i2c, addr, GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
        writeReg(i2c, addr, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x09);
        writeReg(i2c, addr, 0xFF, 0x01);
        writeReg(i2c, addr, ALGO_PHASECAL_LIM, 0x20);
        writeReg(i2c, addr, 0xFF, 0x00);
        break;

      case 12:
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x38);
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(i2c, addr, GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
        writeReg(i2c, addr, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x08);
        writeReg(i2c, addr, 0xFF, 0x01);
        writeReg(i2c, addr, ALGO_PHASECAL_LIM, 0x20);
        writeReg(i2c, addr, 0xFF, 0x00);
        break;

      case 14:
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x48);
        writeReg(i2c, addr, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(i2c, addr, GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
        writeReg(i2c, addr, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x07);
        writeReg(i2c, addr, 0xFF, 0x01);
        writeReg(i2c, addr, ALGO_PHASECAL_LIM, 0x20);
        writeReg(i2c, addr, 0xFF, 0x00);
        break;

      default:
        // invalid period
        return 0;
    }

    // apply new VCSEL period
    writeReg(i2c, addr, FINAL_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg);

    // update timeouts

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_FINAL_RANGE)

    // "For the final range timeout, the pre-range timeout
    //  must be added. To do this both final and pre-range
    //  timeouts must be expressed in macro periods MClks
    //  because they have different vcsel periods."

    uint16_t new_final_range_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.final_range_us, period_pclks);

    if (enables & SEQUENCE_ENABLE_PRE_RANGE)
    {
      new_final_range_timeout_mclks += timeouts.pre_range_mclks;
    }

    writeReg16(i2c, addr, FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
    encodeTimeout(new_final_range_timeout_mclks));

    // set_sequence_step_timeout end
  }
  else
  {
    // invalid type
    return 0;
  }

  // "Finally, the timing budget must be re-applied"

  setMeasurementTimingBudget(i2c, addr, measurement_timing_budget_us);

  // "Perform the phase calibration. This is needed after changing on vcsel period."
  // VL53L0X_perform_phase_calibration() begin

  uint8_t sequence_config = readReg(i2c, addr, SYSTEM_SEQUENCE_CONFIG);
  writeReg(i2c, addr, SYSTEM_SEQUENCE_CONFIG, 0x02);
  performSingleRefCalibration(i2c, addr, 0x0);
  writeReg(i2c, addr, SYSTEM_SEQUENCE_CONFIG, sequence_config);

  // VL53L0X_perform_phase_calibration() end

  return 1;
}

static int setMeasurementTimingBudget(i2c_inst_t *i2c, uint8_t addr, uint32_t budget_us)
{
uint32_t used_budget_us;
uint32_t final_range_timeout_us;
uint16_t final_range_timeout_mclks;

  uint8_t enables;
  SequenceStepTimeouts timeouts;

  uint16_t const StartOverhead      = 1320; // note that this is different than the value in get_
  uint16_t const EndOverhead        = 960;
  uint16_t const MsrcOverhead       = 660;
  uint16_t const TccOverhead        = 590;
  uint16_t const DssOverhead        = 690;
  uint16_t const PreRangeOverhead   = 660;
  uint16_t const FinalRangeOverhead = 550;

  uint32_t const MinTimingBudget = 20000;

  if (budget_us < MinTimingBudget) { return 0; }

  used_budget_us = StartOverhead + EndOverhead;

  enables = readReg(i2c, addr, SYSTEM_SEQUENCE_CONFIG);
  getSequenceStepTimeouts(i2c, addr, enables, &timeouts);

  if (enables & SEQUENCE_ENABLE_TCC)
  {
    used_budget_us += (timeouts.msrc_dss_tcc_us + TccOverhead);
  }

  if (enables & SEQUENCE_ENABLE_DSS)
  {
    used_budget_us += 2 * (timeouts.msrc_dss_tcc_us + DssOverhead);
  }
  else if (enables & SEQUENCE_ENABLE_MSRC)
  {
    used_budget_us += (timeouts.msrc_dss_tcc_us + MsrcOverhead);
  }

  if (enables & SEQUENCE_ENABLE_PRE_RANGE)
  {
    used_budget_us += (timeouts.pre_range_us + PreRangeOverhead);
  }

  if (enables & SEQUENCE_ENABLE_FINAL_RANGE)
  {
    used_budget_us += FinalRangeOverhead;

    // "Note that the final range timeout is determined by the timing
    // budget and the sum of all other timeouts within the sequence.
    // If there is no room for the final range timeout, then an error
    // will be set. Otherwise the remaining time will be applied to
    // the final range."

    if (used_budget_us > budget_us)
    {
      // "Requested timeout too big."
      return 0;
    }

    final_range_timeout_us = budget_us - used_budget_us;

    // set_sequence_step_timeout() begin
    // (SequenceStepId == VL53L0X_SEQUENCESTEP_FINAL_RANGE)

    // "For the final range timeout, the pre-range timeout
    //  must be added. To do this both final and pre-range
    //  timeouts must be expressed in macro periods MClks
    //  because they have different vcsel periods."

    final_range_timeout_mclks =
      timeoutMicrosecondsToMclks(final_range_timeout_us,
                                 timeouts.final_range_vcsel_period_pclks);

    if (enables & SEQUENCE_ENABLE_PRE_RANGE)
    {
      final_range_timeout_mclks += timeouts.pre_range_mclks;
    }

    writeReg16(i2c, addr, FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(final_range_timeout_mclks));

    // set_sequence_step_timeout() end

    measurement_timing_budget_us = budget_us; // store for internal reuse
  }
  return 1;
}

static uint32_t getMeasurementTimingBudget(i2c_inst_t *i2c, uint8_t addr)
{
  uint8_t enables;
  SequenceStepTimeouts timeouts;

  uint16_t const StartOverhead     = 1910; // note that this is different than the value in set_
  uint16_t const EndOverhead        = 960;
  uint16_t const MsrcOverhead       = 660;
  uint16_t const TccOverhead        = 590;
  uint16_t const DssOverhead        = 690;
  uint16_t const PreRangeOverhead   = 660;
  uint16_t const FinalRangeOverhead = 550;

  // "Start and end overhead times always present"
  uint32_t budget_us = StartOverhead + EndOverhead;

  enables = readReg(i2c, addr, SYSTEM_SEQUENCE_CONFIG);
  getSequenceStepTimeouts(i2c, addr, enables, &timeouts);

  if (enables & SEQUENCE_ENABLE_TCC)
  {
    budget_us += (timeouts.msrc_dss_tcc_us + TccOverhead);
  }

  if (enables & SEQUENCE_ENABLE_DSS)
  {
    budget_us += 2 * (timeouts.msrc_dss_tcc_us + DssOverhead);
  }
  else if (enables & SEQUENCE_ENABLE_MSRC)
  {
    budget_us += (timeouts.msrc_dss_tcc_us + MsrcOverhead);
  }

  if (enables & SEQUENCE_ENABLE_PRE_RANGE)
  {
    budget_us += (timeouts.pre_range_us + PreRangeOverhead);
  }

  if (enables & SEQUENCE_ENABLE_FINAL_RANGE)
  {
    budget_us += (timeouts.final_range_us + FinalRangeOverhead);
  }

  measurement_timing_budget_us = budget_us; // store for internal reuse
  return budget_us;
}

static int performSingleRefCalibration(i2c_inst_t *i2c, uint8_t addr, uint8_t vhv_init_byte)
{
int iTimeout;
  writeReg(i2c, addr, SYSRANGE_START, 0x01 | vhv_init_byte); // VL53L0X_REG_SYSRANGE_MODE_START_STOP

  iTimeout = 0;
  while ((readReg(i2c, addr, RESULT_INTERRUPT_STATUS) & 0x07) == 0)
  {
    iTimeout++;
    usleep(5000);
    if (iTimeout > 100) { return 0; }
  }

  writeReg(i2c, addr, SYSTEM_INTERRUPT_CLEAR, 0x01);

  writeReg(i2c, addr, SYSRANGE_START, 0x00);

  return 1;
}

uint16_t readRangeContinuousMillimeters(i2c_inst_t *i2c, uint8_t addr)
{
int iTimeout = 0;
uint16_t range;

  while ((readReg(i2c, addr, RESULT_INTERRUPT_STATUS) & 0x07) == 0)
  {
    iTimeout++;
    usleep(5000);
    if (iTimeout > 50)
    {
      return -1;
    }
  }

  // assumptions: Linearity Corrective Gain is 1000 (default);
  // fractional ranging is not enabled
  range = readReg16(i2c, addr, RESULT_RANGE_STATUS + 10);

  writeReg(i2c, addr, SYSTEM_INTERRUPT_CLEAR, 0x01);

  return range;
}
