==> ezer-soltani/HellKitty-Autonomous-Robot/firmware/Core/Drivers/tof.c <==
#include "tof.h"
#include "main.h"  // Required for GPIO definitions (XSHUT Pins)
#include "i2c.h"   // Required for hi2c1 handle
#include <string.h>
#define I2C_TIMEOUT 100
#define I2C_READ 1
#define I2C_WRITE 0

static void writeReg(VL53L0X_Dev_t *dev, uint8_t reg, uint8_t value) {
  msgBuffer[0] = value;
  i2cStat = HAL_I2C_Mem_Write(dev->I2cHandle, dev->I2cDevAddr | I2C_WRITE, reg, 1, msgBuffer, 1, I2C_TIMEOUT);
}

static uint8_t readReg(VL53L0X_Dev_t *dev, uint8_t reg) {
  uint8_t value;
  i2cStat = HAL_I2C_Mem_Read(dev->I2cHandle, dev->I2cDevAddr | I2C_READ, reg, 1, msgBuffer, 1, I2C_TIMEOUT);
  value = msgBuffer[0];
  return value;
}

static void writeMulti(VL53L0X_Dev_t *dev, uint8_t reg, uint8_t const *src, uint8_t count){
  i2cStat = HAL_I2C_Mem_Write(dev->I2cHandle, dev->I2cDevAddr | I2C_WRITE, reg, 1, (uint8_t*)src, count, I2C_TIMEOUT);
}

static void readMulti(VL53L0X_Dev_t *dev, uint8_t reg, uint8_t * dst, uint8_t count) {
	i2cStat = HAL_I2C_Mem_Read(dev->I2cHandle, dev->I2cDevAddr | I2C_READ, reg, 1, dst, count, I2C_TIMEOUT);
}

uint8_t setMeasurementTimingBudget(VL53L0X_Dev_t *dev, uint32_t budget_us)
{
  SequenceStepEnables enables;
  SequenceStepTimeouts timeouts;

  uint16_t const StartOverhead      = 1320;
  uint16_t const EndOverhead        = 960;
  uint16_t const MsrcOverhead       = 660;
  uint16_t const TccOverhead        = 590;
  uint16_t const DssOverhead        = 690;
  uint16_t const PreRangeOverhead   = 660;
  uint16_t const FinalRangeOverhead = 550;
  uint32_t const MinTimingBudget = 2000;

  if (budget_us < MinTimingBudget) { return false; }

  uint32_t used_budget_us = StartOverhead + EndOverhead;

  getSequenceStepEnables(dev, &enables);
  getSequenceStepTimeouts(dev, &enables, &timeouts);

  if (enables.tcc)
    used_budget_us += (timeouts.msrc_dss_tcc_us + TccOverhead);

  if (enables.dss)
    used_budget_us += 2 * (timeouts.msrc_dss_tcc_us + DssOverhead);
  else if (enables.msrc)
    used_budget_us += (timeouts.msrc_dss_tcc_us + MsrcOverhead);

  if (enables.pre_range)
    used_budget_us += (timeouts.pre_range_us + PreRangeOverhead);

  if (enables.final_range)
  {
    used_budget_us += FinalRangeOverhead;

    if (used_budget_us > budget_us) return false;

    uint32_t final_range_timeout_us = budget_us - used_budget_us;
    uint16_t final_range_timeout_mclks =
      timeoutMicrosecondsToMclks(final_range_timeout_us,
                                 timeouts.final_range_vcsel_period_pclks);

    if (enables.pre_range)
      final_range_timeout_mclks += timeouts.pre_range_mclks;

    writeReg16Bit(dev, FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(final_range_timeout_mclks));

    dev->measurementTimingBudgetUs = budget_us;
  }
  return true;
}

uint32_t getMeasurementTimingBudget(VL53L0X_Dev_t *dev)
{
  SequenceStepEnables enables;
  SequenceStepTimeouts timeouts;

  uint16_t const StartOverhead     = 1910;
  uint16_t const EndOverhead        = 960;
  uint16_t const MsrcOverhead       = 660;
  uint16_t const TccOverhead        = 590;
  uint16_t const DssOverhead        = 690;
  uint16_t const PreRangeOverhead   = 660;
  uint16_t const FinalRangeOverhead = 550;

  uint32_t budget_us = StartOverhead + EndOverhead;

  getSequenceStepEnables(dev, &enables);
  getSequenceStepTimeouts(dev, &enables, &timeouts);

  if (enables.tcc)
    budget_us += (timeouts.msrc_dss_tcc_us + TccOverhead);

  if (enables.dss)
    budget_us += 2 * (timeouts.msrc_dss_tcc_us + DssOverhead);
  else if (enables.msrc)
    budget_us += (timeouts.msrc_dss_tcc_us + MsrcOverhead);

  if (enables.pre_range)
    budget_us += (timeouts.pre_range_us + PreRangeOverhead);

  if (enables.final_range)
    budget_us += (timeouts.final_range_us + FinalRangeOverhead);

  dev->measurementTimingBudgetUs = budget_us;
  return budget_us;
}

uint8_t setVcselPulsePeriod(VL53L0X_Dev_t *dev, vcselPeriodType type, uint8_t period_pclks)
{
  uint8_t vcsel_period_reg = encodeVcselPeriod(period_pclks);

  SequenceStepEnables enables;
  SequenceStepTimeouts timeouts;

  getSequenceStepEnables(dev, &enables);
  getSequenceStepTimeouts(dev, &enables, &timeouts);

  if (type == VcselPeriodPreRange)
  {
    switch (period_pclks)
    {
      case 12: writeReg(dev, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x18); break;
      case 14: writeReg(dev, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x30); break;
      case 16: writeReg(dev, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x40); break;
      case 18: writeReg(dev, PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x50); break;
      default: return false;
    }
    writeReg(dev, PRE_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);
    writeReg(dev, PRE_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg);

    uint16_t new_pre_range_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.pre_range_us, period_pclks);

    writeReg16Bit(dev, PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(new_pre_range_timeout_mclks));

    uint16_t new_msrc_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.msrc_dss_tcc_us, period_pclks);

    writeReg(dev, MSRC_CONFIG_TIMEOUT_MACROP,
      (new_msrc_timeout_mclks > 256) ? 255 : (new_msrc_timeout_mclks - 1));
  }
  else if (type == VcselPeriodFinalRange)
  {
    switch (period_pclks)
    {
      case 8:
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x10);
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(dev, GLOBAL_CONFIG_VCSEL_WIDTH, 0x02);
        writeReg(dev, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x0C);
        writeReg(dev, 0xFF, 0x01);
        writeReg(dev, ALGO_PHASECAL_LIM, 0x30);
        writeReg(dev, 0xFF, 0x00);
        break;

      case 10:
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x28);
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(dev, GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
        writeReg(dev, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x09);
        writeReg(dev, 0xFF, 0x01);
        writeReg(dev, ALGO_PHASECAL_LIM, 0x20);
        writeReg(dev, 0xFF, 0x00);
        break;

      case 12:
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x38);
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(dev, GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
        writeReg(dev, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x08);
        writeReg(dev, 0xFF, 0x01);
        writeReg(dev, ALGO_PHASECAL_LIM, 0x20);
        writeReg(dev, 0xFF, 0x00);
        break;

      case 14:
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x48);
        writeReg(dev, FINAL_RANGE_CONFIG_VALID_PHASE_LOW,  0x08);
        writeReg(dev, GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
        writeReg(dev, ALGO_PHASECAL_CONFIG_TIMEOUT, 0x07);
        writeReg(dev, 0xFF, 0x01);
        writeReg(dev, ALGO_PHASECAL_LIM, 0x20);
        writeReg(dev, 0xFF, 0x00);
        break;

      default: return false;
    }

    writeReg(dev, FINAL_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg);

    uint16_t new_final_range_timeout_mclks =
      timeoutMicrosecondsToMclks(timeouts.final_range_us, period_pclks);

    if (enables.pre_range)
      new_final_range_timeout_mclks += timeouts.pre_range_mclks;

    writeReg16Bit(dev, FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI,
      encodeTimeout(new_final_range_timeout_mclks));
  }
  else { return false; }

  setMeasurementTimingBudget(dev, dev->measurementTimingBudgetUs);

  uint8_t sequence_config = readReg(dev, SYSTEM_SEQUENCE_CONFIG);
  writeReg(dev, SYSTEM_SEQUENCE_CONFIG, 0x02);
  performSingleRefCalibration(dev, 0x0);
  writeReg(dev, SYSTEM_SEQUENCE_CONFIG, sequence_config);

  return true;
}

uint16_t readRangeContinuousMillimeters(VL53L0X_Dev_t *dev, statInfo_t_VL53L0X *extraStats ) {
  uint8_t tempBuffer[12];
  uint16_t temp;
  startTimeout(dev);
  while ((readReg(dev, RESULT_INTERRUPT_STATUS) & 0x07) == 0) {
    if (checkTimeoutExpired(dev))
    {
      dev->isTimeout = true;
      return 65535;
    }
  }
  if( extraStats == 0 ){
    temp = readReg16Bit(dev, RESULT_RANGE_STATUS + 10);
  } else {
    readMulti(dev, 0x14, tempBuffer, 12);
    extraStats->rangeStatus =  tempBuffer[0x00]>>3;
    extraStats->spadCnt     = (tempBuffer[0x02]<<8) | tempBuffer[0x03];
    extraStats->signalCnt   = (tempBuffer[0x06]<<8) | tempBuffer[0x07];
    extraStats->ambientCnt  = (tempBuffer[0x08]<<8) | tempBuffer[0x09];    
    temp                    = (tempBuffer[0x0A]<<8) | tempBuffer[0x0B];
    extraStats->rawDistance = temp;
  }
  writeReg(dev, SYSTEM_INTERRUPT_CLEAR, 0x01);
  return temp;
}

static bool getSpadInfo(VL53L0X_Dev_t *dev, uint8_t * count, bool * type_is_aperture)
{
  uint8_t tmp;
  writeReg(dev, 0x80, 0x01);
  writeReg(dev, 0xFF, 0x01);
  writeReg(dev, 0x00, 0x00);

  writeReg(dev, 0xFF, 0x06);
  writeReg(dev, 0x83, readReg(dev, 0x83) | 0x04);
  writeReg(dev, 0xFF, 0x07);
  writeReg(dev, 0x81, 0x01);

  writeReg(dev, 0x80, 0x01);

  writeReg(dev, 0x94, 0x6b);
  writeReg(dev, 0x83, 0x00);
  startTimeout(dev);
  while (readReg(dev, 0x83) == 0x00)
  {
    if (checkTimeoutExpired(dev)) { return false; }
  }
  writeReg(dev, 0x83, 0x01);
  tmp = readReg(dev, 0x92);

  *count = tmp & 0x7f;
  *type_is_aperture = (tmp >> 7) & 0x01;

  writeReg(dev, 0x81, 0x00);
  writeReg(dev, 0xFF, 0x06);
  writeReg(dev, 0x83, readReg(dev, 0x83)  & ~0x04);
  writeReg(dev, 0xFF, 0x01);
  writeReg(dev, 0x00, 0x01);

  writeReg(dev, 0xFF, 0x00);
  writeReg(dev, 0x80, 0x00);

  return true;
}

static void getSequenceStepTimeouts(VL53L0X_Dev_t *dev, SequenceStepEnables const * enables, SequenceStepTimeouts * timeouts)
{
  timeouts->pre_range_vcsel_period_pclks = getVcselPulsePeriod(dev, VcselPeriodPreRange);

  timeouts->msrc_dss_tcc_mclks = readReg(dev, MSRC_CONFIG_TIMEOUT_MACROP) + 1;
  timeouts->msrc_dss_tcc_us =
    timeoutMclksToMicroseconds(timeouts->msrc_dss_tcc_mclks,
                               timeouts->pre_range_vcsel_period_pclks);

  timeouts->pre_range_mclks =
    decodeTimeout(readReg16Bit(dev, PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI));
  timeouts->pre_range_us =
    timeoutMclksToMicroseconds(timeouts->pre_range_mclks,
                               timeouts->pre_range_vcsel_period_pclks);

  timeouts->final_range_vcsel_period_pclks = getVcselPulsePeriod(dev, VcselPeriodFinalRange);

  timeouts->final_range_mclks =
    decodeTimeout(readReg16Bit(dev, FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI));

  if (enables->pre_range)
  {
    timeouts->final_range_mclks -= timeouts->pre_range_mclks;
  }

  timeouts->final_range_us =
    timeoutMclksToMicroseconds(timeouts->final_range_mclks,
                               timeouts->final_range_vcsel_period_pclks);
}

static bool performSingleRefCalibration(VL53L0X_Dev_t *dev, uint8_t vhv_init_byte)
{
  writeReg(dev, SYSRANGE_START, 0x01 | vhv_init_byte);
  startTimeout(dev);
  while ((readReg(dev, RESULT_INTERRUPT_STATUS) & 0x07) == 0)
  {
    if (checkTimeoutExpired(dev)) { return false; }
  }
  writeReg(dev, SYSTEM_INTERRUPT_CLEAR, 0x01);
  writeReg(dev, SYSRANGE_START, 0x00);
  return true;
}
